--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ border-radius: 2px;
     top: 50%;
     left: 55%;
     transform:translate(-50%, -50%) ;
+	font-family: sans-serif;
     user-select: none;
 }
 .center h1{
