--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ border-radius: 2px;
     outline: none;
     cursor: pointer;
     border-radius: 25px;
+	font-family: semi-expanded;
 
 }
 .buttons .btn{
