--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ border-radius: 2px;
 }
 .center .buttons{
     margin: 35px 280px;
+	font-family:sans-serif;
 }
 .buttons button{
     height: 50px;
@@ -71,7 +72,7 @@ border-radius: 2px;
     outline: none;
     cursor: pointer;
     border-radius: 25px;
-	font-family: semi-expanded;
+	font-family: sans-serif;
 
 }
 .buttons .btn{
