--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 .wrapper{
-    background: url(1.jpg) no-repeat; 
+    background: url(1.jpeg) no-repeat; 
     background-size: cover;
     height: 100vh;
 }
